--- a/app/src/main/res/layout/log_list_item.xml
+++ b/app/src/main/res/layout/log_list_item.xml
@@ -3,13 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="10dp">
+    android:background="@color/background_color_white"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_color_white"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
@@ -44,4 +43,9 @@
             android:textColor="@color/text_color_black"
             android:textSize="16sp"/>
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/divider_color_grey"/>
 </LinearLayout>
