--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="background_color_white">#FFFFFFFF</color>
     <color name="background_color_light_grey">#FFF9FCFF</color>
     <color name="view_background_color_grey">#FFFFFEE1</color>
+    <color name="divider_color_grey">#FFDDDDDD</color>
+
 </resources>
