--- a/app/src/main/res/layout/activity_create_log.xml
+++ b/app/src/main/res/layout/activity_create_log.xml
@@ -25,7 +25,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/btnCreateIssue"
+            android:layout_above="@id/btnAddLog"
             android:layout_alignParentTop="true">
 
             <LinearLayout
