--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -23,11 +23,16 @@
             android:layout_marginBottom="45dp"
             android:orientation="vertical">
 
+            <Spinner
+                android:id="@+id/spinnerGarden"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"/>
+
             <RelativeLayout
                 android:id="@+id/rlAddNewPlant"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_margin="10dp"
                 android:background="@drawable/button_background_white_with_green_border">
 
