--- a/app/src/main/res/layout/activity_service_issues_list.xml
+++ b/app/src/main/res/layout/activity_service_issues_list.xml
@@ -26,7 +26,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
-        android:backgroundTint="@color/button_background_dark_red"
+        app:backgroundTint="@color/button_background_dark_red"
         android:src="@drawable/ic_action_new"
         app:borderWidth="0dp"
         app:elevation="6dp"
